Wed Jun 30 15:02:07 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:

          In the case where there is no DDS implementation available,
          install the IDL files so they can be included by some tests.

Wed Jun 30 14:47:44 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Control_comp/src/Shapes_Control_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Receiver_comp/src/Shapes_Receiver_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Sender_comp/src/Shapes_Sender_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_conn.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_conn.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_msg.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_msg.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_msg.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_msg.mpc:
          Renamed Shapes_msg.idl to Shapes_ShapeType_msg.idl

Wed Jun 30 14:38:33 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:

          Fixed potential crash when a nonexistant instance reference is
          provided.

Wed Jun 30 13:33:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
          Fixed crash when no properties are passed

        * tests/Bug_3832_Regression/run_test.pl:
          Fixed this test script

Wed Jun 30 13:01:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello_Component.mpc:
        * connectors/ami4ccm/tests/SimplexMulti/Sender/UsesSM_Sender.mpc: