@@ -240,14 +240,15 @@ NodeApplication_Impl::start_launch_instances (const Deployment::Properties &prop
                                               Deployment::Connections_out providedReference)
 {
   DANCE_TRACE ("NodeApplication_Impl::start_launch_instances");
-  //  Deployment::Connections *tmp (0);
+  Deployment::Connections *tmp (0);
 
-  //   ACE_NEW_THROW_EX (tmp,
-  //                     Deployment::Connections (this->plan_.connection.length ()),
-  //                     CORBA::NO_MEMORY ());
-  //
-  //   Deployment::Connections_var retval (tmp);
-
+  ACE_NEW_THROW_EX (tmp,
+                   Deployment::Connections (),
+                   CORBA::NO_MEMORY ());
+  
+  providedReference = tmp;
+  CORBA::ULong retval_pos (0);
+  
   for (LOCALITY_MAP::const_iterator i = this->localities_.begin ();
        i != this->localities_.end (); ++i)
     {
@@ -258,8 +259,19 @@ NodeApplication_Impl::start_launch_instances (const Deployment::Properties &prop
 
       try
         {
+          Deployment::Connections_var instance_references;
           i->second->startLaunch (prop,
-                                  providedReference);
+                                  instance_references.out ());
+          
+          
+          providedReference->length (retval_pos + instance_references->length ());
+          
+          for (CORBA::ULong ir_pos = 0;
+               ir_pos < instance_references->length ();
+               ++ir_pos)
+            {
+              providedReference[retval_pos++] = instance_references[ir_pos];
+            }
         }
       catch (Deployment::PlanError &ex)
         {
