@@ -1,3 +1,9 @@
+Wed Jun 30 16:05:10 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
+
+          Fixed a bug where connections weren't properly collated. 
+
 Wed Jun 30 15:02:07 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
